# tinytensor

./: .gitignore  CLAUDE.md  CMakeLists.txt
cmake/: tinytensor-config.cmake.in
docs/: CODE_DOCUMENTATION.md
include/tinytensor/: tinytensor.hpp
include/tinytensor/core/: concepts.hpp  config.hpp  layout.hpp  shape.hpp  strides.hpp
include/tinytensor/tensor/: fixed_tensor.hpp  tensor.hpp  tensor_ops.hpp
include/tinytensor/utils/: assert.hpp
include/tinytensor/views/: broadcast.hpp  slice.hpp  tensor_view.hpp
tests/: CMakeLists.txt  tensor_test.cpp  xtensor_compat_test.cpp
